--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,11 +9,20 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.6",
+    "express": "^4.19.2",
+    "ioredis": "^5.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bun": "latest",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.8"
   }
 }
