--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -18,4 +18,4 @@ RUN bun run build
 
 EXPOSE 3000
 
-CMD ["bun", "run", "preview", "--host", "0.0.0.0", "--port", "3000"]
+CMD ["bun", "run", "serve"]
