--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build && tsc",
+    "serve": "serve -s dist",
     "preview": "vite preview",
     "test": "vitest run"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.84.2",
@@ -23,6 +24,7 @@
     "motion": "^11.18.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "serve": "^14.2.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6"
