--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://<user>:<pass>@<cluster>.mongodb.net/user-activity-tracker
+MONGO_URI=mongodb://localhost:27017/user-activity-tracker
 JWT_SECRET=replace-with-a-long-secret
 PORT=8000
 REDIS_URL=redis://localhost:6379
