--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  mongo:
+    image: mongo:8
+    restart: unless-stopped
+    environment:
+      MONGO_INITDB_DATABASE: user-activity-tracker
+    volumes:
+      - mongo_data:/data/db
+    networks:
+      - internal
+
   redis:
     image: redis:7-alpine
     networks:
@@ -10,11 +20,12 @@ services:
       dockerfile: apps/api/Dockerfile
     environment:
       PORT: 8000
-      MONGO_URI: ${MONGO_URI}
+      MONGO_URI: ${MONGO_URI:-mongodb://mongo:27017/user-activity-tracker}
       JWT_SECRET: ${JWT_SECRET}
       CORS_ORIGIN: ${CORS_ORIGIN:-}
       REDIS_URL: redis://redis:6379
     depends_on:
+      - mongo
       - redis
     networks:
       - internal
@@ -55,3 +66,4 @@ networks:
 volumes:
   caddy_data:
   caddy_config:
+  mongo_data:
