--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       context: .
       dockerfile: apps/web/Dockerfile
       args:
-        VITE_API_URL: /api
+        VITE_API_URL: https://uat.kxna.space
     expose:
       - "3000"
     networks:
